fix: Menu Load Map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/GameWorld.GameWorld
+EditorStartupMap=/Game/Maps/GameMap.GameMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/GameWorld.GameWorld
+GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
