--- a/FPS_TTW.uproject
+++ b/FPS_TTW.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{A9F7A45B-40E0-72A5-A926-9CBF8F30BF91}",
+	"EngineAssociation": "5.2",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
