Currency and Economy System Added
Towers are not free anymore needed
Currency
Currency is a Pickupable item
drowned from defeated enemies

Co-Authored-By: ProgenaP224 <140748011+ProgenaP224@users.noreply.github.com>

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/SpawnPointTower/Currency.Currency_C
 GameDefaultMap=/Game/Maps/GameWorld.GameWorld
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
