--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=610CF1024BBFB9976E3C25B1884C7E64
 ProjectName=First Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+ForDistribution=False
+
