--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,15 +17,19 @@ GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_Fir
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=2
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=2
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
-r.Shadow.Virtual.Enable=1
-r.Mobile.AntiAliasing=1
+r.Shadow.Virtual.Enable=0
+r.Mobile.AntiAliasing=2
+r.VirtualTextures=True
+r.VirtualTexturedLightmaps=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -43,8 +47,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=False
-FixedFrameRate=30.000000
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
