feat: Base Preparings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PMaps/PrototypeMaps/NewTTWMainPrototypeMap.NewTTWMainPrototypeMap
+EditorStartupMap=/Game/PMaps/PrototypeMaps/TTWMainPrototypeMap_V2.TTWMainPrototypeMap_V2
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
