feat: Last Changes

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,6 @@ ProjectName=First Person BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 
