--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@ r.RayTracing.UseTextureLod=False
 r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
-r.Nanite.ProjectEnabled=True
+r.Nanite.ProjectEnabled=False
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
