--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@ r.RayTracing.UseTextureLod=False
 r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
-r.Nanite.ProjectEnabled=False
+r.Nanite.ProjectEnabled=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
@@ -173,8 +173,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=False
-FixedFrameRate=60.000000
+bUseFixedFrameRate=True
+FixedFrameRate=30.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
