feat : map version 3 is finished and ready to use
map is ready for game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,7 +173,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=30.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
