feat: add new models

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,8 +173,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=False
-FixedFrameRate=30.000000
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
