feat: Add Dynamic Light to Display Settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,7 +46,7 @@ GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.ClearCoatNormal=False
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=1
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
@@ -54,7 +54,7 @@ r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.Skylight=False
@@ -175,6 +175,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 bUseFixedFrameRate=False
 FixedFrameRate=30.000000
+bSmoothFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
