--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PMaps/PrototypeMaps/TTWMainPrototypeMap_V3.TTWMainPrototypeMap_V3
+EditorStartupMap=/Game/PMaps/PrototypeMaps/TTWMainPrototypeMap_V4_Big.TTWMainPrototypeMap_V4_Big
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
