--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,15 +46,15 @@ GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.ClearCoatNormal=False
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
-r.ReflectionCaptureResolution=128
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=2
+r.ReflectionCaptureResolution=256
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.Skylight=False
@@ -173,8 +173,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=False
-FixedFrameRate=30.000000
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 bSmoothFrameRate=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
