--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,7 +173,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=60.000000
 bSmoothFrameRate=False
 
@@ -218,4 +218,10 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPNumSubdivs=2)
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_30
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
