feat: map V5 initialized with light setting
Map V5 is now initialized, and Paragon assets are ready to use in the level. Additionally, there is good midday lighting set up for the game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PMaps/PrototypeMaps/TTWMainPrototypeMap_V4_Big.TTWMainPrototypeMap_V4_Big
+EditorStartupMap=/Game/PMaps/PrototypeMaps/TTWMainPrototypeMap_V5.TTWMainPrototypeMap_V5
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
