--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,7 +173,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/FPS_TTW")
-bUseFixedFrameRate=False
+bUseFixedFrameRate=True
 FixedFrameRate=60.000000
 bSmoothFrameRate=False
 
